--- a/js/package.json
+++ b/js/package.json
@@ -4,5 +4,20 @@
   "description": "JS subpackage from mixed-monorepo.",
   "main": "index.js",
   "author": "kalabro",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "https://github.com/kalabro/mixed-monorepo-js",
+  "scripts": {
+    "semantic-release": "semantic-release"
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ]
+  },
+  "devDependencies": {
+    "semantic-release": "^15.13.18"
+  }
 }
