--- a/js/.circleci/config.yml
+++ b/js/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 jobs:
   split_and_push:
-    working_directory: ~/mixed-monorepo
+    working_directory: ~/mixed-monorepo-js
     docker:
       - image: circleci/node:10
     steps:
