--- a/js/package.json
+++ b/js/package.json
@@ -17,6 +17,9 @@
       "@semantic-release/git"
     ]
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@semantic-release/git": "^7.0.16",
     "semantic-release": "^15.13.18"
