--- a/js/package.json
+++ b/js/package.json
@@ -10,7 +10,14 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/npm"
+      "@semantic-release/npm",
+      [
+        "semantic-release-slack-bot",
+        {
+          "notifyOnSuccess": true,
+          "notifyOnFail": true
+        }
+      ]
     ]
   },
   "publishConfig": {
