--- a/js/.circleci/config.yml
+++ b/js/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           name: Install Slack bot for semantic-release.
-          command: npm i -g semantic-release-slack-bot
+          command: npm i -g semantic-release semantic-release-slack-bot
       - run:
           name: Run semantic release
           command: npx semantic-release
